--- a/transformation_manager.ipynb
+++ b/transformation_manager.ipynb
@@ -2,162 +2,79 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "id": "67a5a8b8-337f-4df7-b9c7-716c3ff36529",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# General imports\n",
     "import numpy as np\n",
-    "from qiskit import *\n",
-    "from qiskit_optimization import QuadraticProgram\n",
-    "from qiskit.quantum_info import SparsePauliOp\n",
-    "from qiskit_optimization.converters import (InequalityToEquality, IntegerToBinary, \n",
-    "                                            LinearEqualityToPenalty, LinearInequalityToPenalty,\n",
-    "                                            MaximizeToMinimize, QuadraticProgram2Ising)\n",
-    "# SPSA\n",
-    "from qiskit_optimization.spsa import minimize_spsa\n",
     "\n",
-    "# Fulqrum\n",
-    "from qiskit_optimization.fulqrum import CompositeWorkflow, PropertySet\n",
+    "# Qiskit ansatz circuits\n",
+    "from qiskit.circuit.library import EfficientSU2, TwoLocal\n",
     "\n",
-    "from docplex.mp.model import Model\n",
+    "# Qiskit primitives\n",
+    "from qiskit.primitives import Estimator as QiskitEstimator\n",
+    "from qiskit.primitives import Sampler as QiskitSampler\n",
     "\n",
-    "# SciPy minimizer routine\n",
-    "from scipy.optimize import minimize\n",
-    "\n",
+    "# Qiskit runtime\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "from qiskit_ibm_runtime import Estimator, Sampler, Session\n",
-    "from qiskit.result import QuasiDistribution\n",
     "\n",
-    "from qiskit.circuit.library import EfficientSU2, TwoLocal"
+    "# Qiskit optimization\n",
+    "from qiskit_optimization import QuadraticProgram\n",
+    "from qiskit_optimization.workflows import QUBO_transformer\n",
+    "from qiskit_optimization.passes.qubo_to_ising import QUBO2Ising\n",
+    "from qiskit_optimization.passes.eval_solution import EvaluateProgramSolution\n",
+    "from qiskit_optimization.passes.qubo_unroller import UnrollQUBOVariables\n",
+    "\n",
+    "# Docplex\n",
+    "from docplex.mp.model import Model\n",
+    "\n",
+    "# SPSA\n",
+    "from qiskit_optimization.spsa import minimize_spsa"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1237cbeb-847a-4c59-bd2d-e5a332b43cb2",
+   "metadata": {},
+   "source": [
+    "## Load the Runtime (if using)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "4ecdb64d-b886-4ab1-a2ec-d36c21e17115",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#service = QiskitRuntimeService()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4ecdb64d-b886-4ab1-a2ec-d36c21e17115",
+   "id": "3e136c81-0098-46ea-9038-daecaa6949ff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "service = QiskitRuntimeService()"
+    "#backend = service.get_backend('ibm_nazca')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "dda90ad4-43f2-49e9-ba3e-fb5df7a95e48",
+   "cell_type": "markdown",
+   "id": "5a6009b4-fc67-4736-9178-1c3f5057fc40",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def evaluate_quadratic_program(bitstring, program):\n",
-    "    constant = program.objective.constant\n",
-    "    linear_elements = program.objective.linear.to_dict()\n",
-    "    quadratic_elements = program.objective._quadratic.to_dict()\n",
-    "\n",
-    "    # Flip string so 0th bit is 0th array element for easy math\n",
-    "    x = np.fromiter(list(bitstring[::-1]), dtype=int)\n",
-    "    \n",
-    "    sum = constant\n",
-    "    for element, val in linear_elements.items():\n",
-    "        sum += x[element] * val\n",
-    "    for element, val in quadratic_elements.items():\n",
-    "        sum += x[element[0]] * val * x[element[1]]\n",
-    "    return sum"
+    "## Build optimization problem using docplex\n",
+    "Define problem using standard classical representation. **This is the classical input.  Nothing quantum is here.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "b8079644-c852-4987-a1fe-fb1e3be425c5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from functools import wraps\n",
-    "\n",
-    "def validate_output_type(func):     \n",
-    "    @wraps(func)\n",
-    "    def wrapper(*args, **kwargs):\n",
-    "        output_types = args[0].output_types\n",
-    "        out = func(*args, **kwargs)\n",
-    "        if not isinstance(out, output_types):\n",
-    "            raise TypeError(f'Output type not in {output_types}')\n",
-    "        return out\n",
-    "    return wrapper  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "id": "76b074e2-0a66-4231-8208-318662634c5c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "numpy.ndarray"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "id": "a1548836-a5e4-446a-9e6f-8534916bf521",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class EvaluateProgramSolution:\n",
-    "    \"\"\"Evaluate solutions\n",
-    "    \"\"\"\n",
-    "    def __init__(self, program=None):\n",
-    "        self.program = program\n",
-    "        self.input_types = (QuasiDistribution, )\n",
-    "        self.output_types = (tuple, )\n",
-    "        self.property_set = PropertySet()\n",
-    "\n",
-    "    @validate_output_type\n",
-    "    def run(self, dist):\n",
-    "        if self.program is None:\n",
-    "            program = self.property_set['qubo-transformer']['final_output']\n",
-    "        best_val = np.inf\n",
-    "        best_bits = None\n",
-    "        for bitstring in dist.binary_probabilities():\n",
-    "            temp = evaluate_quadratic_program(bitstring, self.program)\n",
-    "            if temp < best_val:\n",
-    "                best_val = temp\n",
-    "                best_bits = bitstring\n",
-    "        best_bits = best_bits[::-1]\n",
-    "        out = (best_val, np.fromiter(best_bits, int))\n",
-    "        return out\n",
-    "\n",
-    "\n",
-    "class UnrollQUBOVariables():\n",
-    "    \"\"\"Unroll QUBO variables to their original definitions\n",
-    "    \"\"\"\n",
-    "    def __init__(self, workflow):\n",
-    "        self.workflow = workflow\n",
-    "        self.input_types = (tuple, )\n",
-    "        self.output_types = (np.ndarray, )\n",
-    "        self.property_set = PropertySet()\n",
-    "\n",
-    "    @validate_output_type\n",
-    "    def run(self, solution):\n",
-    "        x = np.fromiter(solution[1], dtype=int)\n",
-    "        for converter in self.workflow.passes[::-1]:\n",
-    "            x = converter.interpret(x)\n",
-    "        return x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "id": "60e03730-2f3a-48fe-bc50-9d079c11603c",
    "metadata": {},
    "outputs": [],
@@ -171,18 +88,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "3e136c81-0098-46ea-9038-daecaa6949ff",
+   "cell_type": "markdown",
+   "id": "823b3cd9-be66-4d94-a9a1-d766a270dbf6",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "backend = service.get_backend('ibm_nazca')"
+    "## Convert to our `QuadraticProgram` format"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "49a33b1f-8262-4171-b71e-f628e8b9c884",
    "metadata": {},
    "outputs": [],
@@ -191,105 +106,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5d434122-503a-4949-b6a8-0674882c4644",
+   "metadata": {},
+   "source": [
+    "## Perform transformations to QUBO and return new program\n",
+    "**Nothing quantum happens here either**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "id": "4915d0c1-b45b-493f-b1e6-a6269c548c27",
    "metadata": {},
    "outputs": [],
    "source": [
-    "qubo_transformer = CompositeWorkflow([InequalityToEquality(), # Transformation\n",
-    "                                      IntegerToBinary(), # Transformation\n",
-    "                                      LinearEqualityToPenalty(), # Transformation\n",
-    "                                      LinearInequalityToPenalty(), # Transformation\n",
-    "                                      MaximizeToMinimize(), # Transformation\n",
-    "                                     ], name='qubo-transformer', store_final_output=True)"
+    "qubo_transformer = QUBO_transformer()\n",
+    "qubo = qubo_transformer.run(qp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6b2bda5-bbf7-44a1-9628-31b9689483a8",
+   "metadata": {},
+   "source": [
+    "## All the quantum stuff is here\n",
+    "### Convert from QUBO to Ising"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "a41da3bb-bff8-4c8a-90d8-8011e817d4a2",
+   "execution_count": 7,
+   "id": "bea885b0-a87e-43f3-8e34-a2cabd90ffd4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#session = Session(backend=backend)\n",
-    "#cw = CompositeWorkflow([transformer,\n",
-    "#                        QuadraticProgram2Ising(), # Quantum part - to Hamiltonian\n",
-    "                        #QAOASolver(session), # Quantum part - execution on QPU\n",
-    "                        #EvaluateProgramSolution() # Quantum part - bit-string to program variables\n",
-    "#                        ])"
+    "hamiltonian = QUBO2Ising().run(qubo)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 51,
-   "id": "19e82890-ece0-4904-a9d5-e7d69d4850aa",
+   "cell_type": "markdown",
+   "id": "8c55893f-5e2e-4519-80ba-6711b93b045d",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "qubo = qubo_transformer.run(qp)\n",
-    "hamiltonian = QuadraticProgram2Ising().run(qubo)"
+    "### Standard cost function definition"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "a7c49fcf-b2b2-49ee-8ad0-454bab9602a9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "SparsePauliOp(['IIZI', 'IZII', 'ZIII', 'IIIZ', 'IIII'],\n",
-       "              coeffs=[-1. +0.j, -2. +0.j, -1. +0.j,  0.5+0.j, -0.5+0.j])"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hamiltonian"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "d87b1e0d-829f-441e-aeb3-970c43cff521",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.+0.j, 1.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j,\n",
-       "       0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j])"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.linalg.eig(hamiltonian.to_matrix())[1][:,1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "id": "aed58f2e-0761-441f-aeea-793adeabc63a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#session = Session(backend=backend)\n",
-    "from qiskit.primitives import Estimator as QiskitEstimator\n",
-    "from qiskit.primitives import Sampler as QiskitSampler\n",
-    "\n",
-    "#estimator = Estimator(session=session, options={\"shots\": int(1e4)})\n",
-    "#sampler = Sampler(session=session, options={\"shots\": int(1e4)})\n",
-    "\n",
-    "\n",
     "def cost_func(params, ansatz, hamiltonian, estimator):\n",
     "    \"\"\"Return estimate of energy from estimator\n",
     "\n",
@@ -303,38 +172,118 @@
     "        float: Energy estimate\n",
     "    \"\"\"\n",
     "    cost = estimator.run(ansatz, hamiltonian, parameter_values=params).result().values[0]\n",
-    "    return cost\n",
-    "\n",
-    "\n",
+    "    return cost"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3b0aac9-67cc-424a-8cfa-5368dbeea9b8",
+   "metadata": {},
+   "source": [
+    "### Setup estimator and sampler instances"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f3315e0-b85e-44e9-a286-01888d28038f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#session = Session(backend=backend)\n",
+    "#estimator = Estimator(session=session, options={\"shots\": int(1e4)})\n",
+    "#sampler = Sampler(session=session, options={\"shots\": int(1e4)})\n",
+    "estimator = QiskitEstimator(options={\"shots\": int(1e4)})\n",
+    "sampler = QiskitSampler(options={\"shots\": int(1e4)})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8302b04-36fb-429f-9d92-446f9b9e6333",
+   "metadata": {},
+   "source": [
+    "### Perform minimization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0fd6a59d-7e53-42a9-9410-c236239ed66a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ansatz = TwoLocal(hamiltonian.num_qubits, 'ry', 'cx', 'linear', reps=1)\n",
     "x0 = 2*np.pi*np.random.random(size=ansatz.num_parameters)\n",
-    "estimator = QiskitEstimator(options={\"shots\": int(1e4)})\n",
-    "sampler = QiskitSampler(options={\"shots\": int(1e4)})\n",
-    "res = minimize_spsa(cost_func, x0, args=(ansatz, hamiltonian, estimator), maxiter=100)\n",
+    "res = minimize_spsa(cost_func, x0, args=(ansatz, hamiltonian, estimator), maxiter=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39c2b583-8ec4-4cca-8014-697cbda48207",
+   "metadata": {},
+   "source": [
+    "### Computute distribution at found minimum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a63e4bba-1d5b-402e-ae39-8cd35c6843d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Assign solution parameters to ansatz\n",
     "qc = ansatz.assign_parameters(res.x)\n",
-    "# Add measurements to our circuit\n",
     "qc.measure_all()\n",
-    "# Sample ansatz at optimal parameters\n",
     "samp_dist = sampler.run(qc, shots=int(1e4)).result().quasi_dists[0]\n",
     "# Close the session since we are now done with it\n",
     "#session.close()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 60,
-   "id": "6538029d-37e4-4c21-9423-1949496c2600",
+   "cell_type": "markdown",
+   "id": "742ff430-8649-4dac-8dd2-bc8b9712e41e",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "sol = EvaluateProgramSolution(qubo).run(samp_dist)"
+    "### Express quantum solution as QUBO variable values\n",
+    "Convert bit-string solutions to variable values in QUBO problem"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "05139170-ff25-4881-a924-9966aefbadbb",
+   "execution_count": 13,
+   "id": "3a68f4db-6148-4243-b5ba-d678e3e5c5fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-5.0, array([1, 0, 0, 0]))"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = EvaluateProgramSolution(qubo).run(samp_dist)\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f52cbc3-618f-4c95-ab07-ae28c9d884ab",
+   "metadata": {},
+   "source": [
+    "## Classical postprocess\n",
+    "Unrolling QUBO variables back to the original problem definition. **This is classical processing. Nothing quantum happens here**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "6538029d-37e4-4c21-9423-1949496c2600",
    "metadata": {},
    "outputs": [
     {
@@ -343,19 +292,28 @@
        "array([ 1., -2.])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "UnrollQUBOVariables(qubo_transformer).run(sol)"
+    "UnrollQUBOVariables(qubo_transformer).run(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a0762b4-445d-486a-b875-41713789dc12",
+   "metadata": {},
+   "source": [
+    "## Intepretation of solution\n",
+    "Depends on input, but is completely separate from quantum having done the processing for the solution."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e96a619-bc11-4494-b50c-c90436b977b6",
+   "id": "73ea2ef8-f67b-4ee2-bf59-8b9b777184d4",
    "metadata": {},
    "outputs": [],
    "source": []
