--- a/basic_optimization_workflow.ipynb
+++ b/basic_optimization_workflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "67a5a8b8-337f-4df7-b9c7-716c3ff36529",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
    "id": "d6b2bda5-bbf7-44a1-9628-31b9689483a8",
    "metadata": {},
    "source": [
-    "## All the quantum stuff is here\n",
+    "## All the quantum stuff is here ⚛️\n",
     "### Convert from QUBO to Ising"
    ]
   },
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "6f3315e0-b85e-44e9-a286-01888d28038f",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "0fd6a59d-7e53-42a9-9410-c236239ed66a",
    "metadata": {},
    "outputs": [],
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "a63e4bba-1d5b-402e-ae39-8cd35c6843d9",
    "metadata": {},
    "outputs": [],
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "3a68f4db-6148-4243-b5ba-d678e3e5c5fe",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
        "(-5.0, array([1, 0, 0, 0]))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "6538029d-37e4-4c21-9423-1949496c2600",
    "metadata": {},
    "outputs": [
@@ -292,7 +292,7 @@
        "array([ 1., -2.])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
