--- a/basic_optimization_workflow.ipynb
+++ b/basic_optimization_workflow.ipynb
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "6538029d-37e4-4c21-9423-1949496c2600",
    "metadata": {},
    "outputs": [
@@ -292,13 +292,14 @@
        "array([ 1., -2.])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "UnrollQUBOVariables(qubo_transformer).run(res)"
+    "solution = UnrollQUBOVariables(qubo_transformer).run(res)\n",
+    "solution"
    ]
   },
   {
