CompositeWorkflow to Workflow

--- a/basic_optimization_workflow.ipynb
+++ b/basic_optimization_workflow.ipynb
@@ -313,8 +313,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "73ea2ef8-f67b-4ee2-bf59-8b9b777184d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<qiskit_optimization.converters.inequality_to_equality.InequalityToEquality at 0x16e562f50>,\n",
+       " <qiskit_optimization.converters.integer_to_binary.IntegerToBinary at 0x16e562b60>,\n",
+       " <qiskit_optimization.converters.linear_equality_to_penalty.LinearEqualityToPenalty at 0x16e563490>,\n",
+       " <qiskit_optimization.converters.linear_inequality_to_penalty.LinearInequalityToPenalty at 0x16e5634f0>,\n",
+       " <qiskit_optimization.converters.flip_problem_sense.MaximizeToMinimize at 0x16e563580>]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf81f68e-ec62-473a-bbc8-d39540e5240e",
    "metadata": {},
    "outputs": [],
    "source": []
