--- a/basic_optimization_workflow.ipynb
+++ b/basic_optimization_workflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "67a5a8b8-337f-4df7-b9c7-716c3ff36529",
    "metadata": {},
    "outputs": [],
@@ -74,16 +74,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "60e03730-2f3a-48fe-bc50-9d079c11603c",
    "metadata": {},
    "outputs": [],
    "source": [
     "mdl = Model(\"docplex model\")\n",
     "x = mdl.binary_var(\"x\")\n",
-    "y = mdl.integer_var(lb=-2, ub=2, name=\"y\")\n",
-    "mdl.minimize(2 * y - x)\n",
-    "# Min-result should be x = 1, y = -2 => -5\n",
+    "y = mdl.binary_var(\"y\")\n",
+    "z = mdl.binary_var(\"z\")\n",
+    "mdl.minimize(x*y - x*z + 2*y*z + x - 2*y + 3*z)\n",
     "#print(mdl.export_as_lp_string())"
    ]
   },
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "49a33b1f-8262-4171-b71e-f628e8b9c884",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "id": "4915d0c1-b45b-493f-b1e6-a6269c548c27",
    "metadata": {},
    "outputs": [],
@@ -136,12 +136,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "id": "bea885b0-a87e-43f3-8e34-a2cabd90ffd4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SparsePauliOp(['IIZ', 'IZI', 'ZII', 'IZZ', 'ZIZ', 'ZZI', 'III'],\n",
+       "              coeffs=[-0.5 +0.j,  0.25+0.j, -1.75+0.j,  0.25+0.j, -0.25+0.j,  0.5 +0.j,\n",
+       "  1.5 +0.j])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "hamiltonian = QUBO2Ising().run(qubo)"
+    "hamiltonian = QUBO2Ising().run(qubo)\n",
+    "hamiltonian"
    ]
   },
   {
@@ -154,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "id": "aed58f2e-0761-441f-aeea-793adeabc63a",
    "metadata": {},
    "outputs": [],
@@ -185,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "id": "6f3315e0-b85e-44e9-a286-01888d28038f",
    "metadata": {},
    "outputs": [],
@@ -207,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "id": "0fd6a59d-7e53-42a9-9410-c236239ed66a",
    "metadata": {},
    "outputs": [],
@@ -227,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "id": "a63e4bba-1d5b-402e-ae39-8cd35c6843d9",
    "metadata": {},
    "outputs": [],
@@ -251,17 +265,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "id": "3a68f4db-6148-4243-b5ba-d678e3e5c5fe",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(-5.0, array([1, 0, 0, 0]))"
+       "(-2.0, array([0, 1, 0]))"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,17 +296,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "id": "6538029d-37e4-4c21-9423-1949496c2600",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 1., -2.])"
+       "array([0., 1., 0.])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,31 +327,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "73ea2ef8-f67b-4ee2-bf59-8b9b777184d4",
+   "execution_count": 41,
+   "id": "7bd13995-29cd-47fb-9df2-c2c313beb0e7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<qiskit_optimization.converters.inequality_to_equality.InequalityToEquality at 0x16e562f50>,\n",
-       " <qiskit_optimization.converters.integer_to_binary.IntegerToBinary at 0x16e562b60>,\n",
-       " <qiskit_optimization.converters.linear_equality_to_penalty.LinearEqualityToPenalty at 0x16e563490>,\n",
-       " <qiskit_optimization.converters.linear_inequality_to_penalty.LinearInequalityToPenalty at 0x16e5634f0>,\n",
-       " <qiskit_optimization.converters.flip_problem_sense.MaximizeToMinimize at 0x16e563580>]"
+       "[<qiskit_optimization.converters.inequality_to_equality.InequalityToEquality at 0x13abf9300>,\n",
+       " <qiskit_optimization.converters.integer_to_binary.IntegerToBinary at 0x13ac5efb0>,\n",
+       " <qiskit_optimization.converters.linear_equality_to_penalty.LinearEqualityToPenalty at 0x13ac5e800>,\n",
+       " <qiskit_optimization.converters.linear_inequality_to_penalty.LinearInequalityToPenalty at 0x13ac5d840>,\n",
+       " <qiskit_optimization.converters.flip_problem_sense.MaximizeToMinimize at 0x13ac5e950>]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "qubo_transformer.blocks"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf81f68e-ec62-473a-bbc8-d39540e5240e",
+   "id": "f3bf8e14-cb80-4757-877f-88e9223633e5",
    "metadata": {},
    "outputs": [],
    "source": []
